<resources>
    <string name="app_name">quizzitch</string>
    <string name="title_activity_dash">Dash</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="history">HISTORY</string>
    <string name="politics">POLITICS</string>
    <string name="dance">DANCE</string>
    <string name="bollywood">BOLLYWOOD</string>
    <string name="sports">SPORTS</string>
    <string name="culture">CULTURE</string>
    <string name="science">SCIENCE</string>
    <string name="computers">COMPUTERS</string>
    <string name="mythology">MYTHOLOGY</string>
    <string name="geography">GEOGRAPHY</string>
    <string name="art">ART</string>
    <string name="animals">ANIMALS</string>
    <string name="comics">COMICS</string>
    <string name="anime">ANIME</string>
    <string name="gadgets">GADGETS</string>
    <string name="coding">CODING</string>
    <string name="cartoon">CARTOON</string>
    <string name="gk">GK</string>
    <string name="covid_19">COVID 19</string>
    <string name="marvel">MARVEL</string>
    <string name="next">Next</string>
    <string name="quiz">Quiz</string>
    <string name="previous">Previous</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="difficult">Difficult</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fantasy">FANTASY</string>
    <string name="choose_your">choose your</string>
    <string name="level">LEVEL</string>
    <string name="easy_peasy">easy peasy</string>
    <string name="average">average</string>
    <string name="hard">hard</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="submit">submit</string>
    <string name="choose_your_category">CHOOSE YOUR CATEGORY</string>
    <string name="this_is_option_1">This is option 1</string>
    <string name="this_is_option_2">This is option 2</string>
    <string name="this_is_option_3">This is option 3</string>
    <string name="this_is_option_4">This is option 4</string>
    <string name="choose_difficulty">CHOOSE DIFFICULTY</string>
    <string name="level2">LEVEL!!</string>
    <string name="finish">FINISH</string>
    <string name="_4_5">4/5</string>
    <string name="your_score_is">Your Score is</string>
    <string name="congratulations">Congratulations !!</string>
    <string name="score">score</string>
</resources>